--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="Portfolio.html" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -267,7 +267,7 @@ Experience in Google Firebase,
           <h2>Portfolio</h2>
           <p>Some of my tasks and projects site pages.
 
-            You can take a look at <a href="">my Github account and Repositories</a> </p>
+            You can take a look at <a href="https://github.com/MostafaLamloum">my Github account and Repositories</a> </p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -368,7 +368,7 @@ Experience in Google Firebase,
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+00201064460164</p>
+                <p>+201064460164</p>
               </div>
 
               <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d13916.024430711508!2d30.8384088!3d29.3114965!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2seg!4v1670433076733!5m2!1sen!2seg" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
@@ -376,7 +376,7 @@ Experience in Google Firebase,
 
           </div>
 
-          <div class="col-lg-6 mt-5 mt-lg-0 d-flex align-items-stretch">
+          <div id="contactme" class="col-lg-6 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="https://formspree.io/f/xlevqlko" method="POST"  role="form" >
               <div class="row">
                 <div class="form-group col-md-6">
@@ -401,8 +401,11 @@ Experience in Google Firebase,
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div> -->
-              <div class="text-center" style="margin-top: 10%;"><button type="submit">Send Message</button></div>
+              <div class="text-center" style="margin-top: 10%;"><button type="submit" onclick="showMassage();">Send Message</button></div>
+              <div id="massage" class="sent-message" style="display: none;">Your message has been sent. Thank you!</div>
+
             </form>
+            
           </div>
 
         </div>
@@ -430,6 +433,12 @@ Experience in Google Firebase,
 
   <!--  Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script>
+function showMassage() {
+        document.getElementById('massage').style.display = 'inherit';
+        document.getElementById('contactme').style.display = 'none';
+    }
+  </script>
 
 </body>
 
