--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile.jpeg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-face.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Mostafa Lamloum</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/MostafaLamloum" class="github"><i class="bx bxl-github"></i></a>
@@ -86,7 +86,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/profile-face.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>UI Designer &amp; Web Developer.</h3>
