--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
+                  <><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></>
                   <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>mostafa.l.ham@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Open to job opportunities</strong></li>
                 </ul>
