--- a/index.html
+++ b/index.html
@@ -322,6 +322,24 @@ Experience in Google Firebase,
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img//DAL.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img//DAL.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <a href="https://dal-ed926.web.app/index.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/DAL-EN.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/DAL-EN.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <a href="https://dal-ed926.web.app/DAL-EN/index.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
@@ -333,7 +351,6 @@ Experience in Google Firebase,
             </div>
           </div>
           </div>
-
         </div>
 
       </div>
