--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <img src="assets/img/profile-face.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Mostafa Lamloum</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://github.com/MostafaLamloum" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://www.linkedin.com/in/mostafa-lamloum-6b9ba1129/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://twitter.com/Mostafa_lamloum" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/profile.php?id=100005960535934" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a target="_blank" href="https://github.com/MostafaLamloum" class="github"><i class="bx bxl-github"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/in/mostafa-lamloum-6b9ba1129/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a target="_blank" href="https://twitter.com/Mostafa_lamloum" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a target="_blank" href="https://www.facebook.com/profile.php?id=100005960535934" class="facebook"><i class="bx bxl-facebook"></i></a>
         </div>
       </div>
 
@@ -103,7 +103,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>mostafa.l.ham@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Open to job opportunities</strong></li>
                 </ul>
